--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --primary: 189, 97%, 55%;
+  --background: 220, 43%, 1%;
+  --primary-faded: 189, 79%, 23%;
+  --text-on-primary: 220, 27%, 2%;
+  --secondary-button-text: 210, 1%, 45%;
+  --button-background: 220, 6%, 9%;
+  --input-background: 188, 34%, 13%;
+  --white: 0, 0%, 100%;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  @apply bg-background text-primary;
 }
