--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
   --button-background: 220, 6%, 9%;
   --input-background: 188, 34%, 13%;
   --white: 0, 0%, 100%;
+  --rating: 156, 100%, 40%;
 }
 
 body {
