--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --primary: 189, 97%, 55%;
   --background: 220, 43%, 1%;
   --primary-faded: 189, 79%, 23%;
+  --primary-hover: 189, 100%, 73.1%;
+  --primary-focus: 188 89.9% 46.5%;
   --text-on-primary: 220, 27%, 2%;
   --secondary-button-text: 210, 1%, 45%;
   --button-background: 220, 6%, 9%;
