wip - multiple select server actions wip

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
   --text-on-primary: 220, 27%, 2%;
   --secondary-button-text: 210, 1%, 45%;
   --button-background: 220, 6%, 9%;
+  --button-selected-background: 220, 3%, 22%;
   --input-background: 188, 34%, 13%;
   --white: 0, 0%, 100%;
   --rating: 156, 100%, 40%;
