--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
   --text-on-primary: 220, 27%, 2%;
   --secondary-button-text: 210, 1%, 45%;
   --button-background: 220, 6%, 9%;
+  --overlay: 220 4.76% 12.4%;
   --button-selected-background: 220, 2.65%, 22.2%;
   --white: 0, 0%, 100%;
   --rating: 156, 100%, 40%;
