code quality improvements

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
   --button-background: 220, 6%, 9%;
   --overlay: 220 4.76% 12.4%;
   --button-selected-background: 220, 2.65%, 22.2%;
+  --button-background-brighter: 216, 6%, 16%;
   --white: 0, 0%, 100%;
   --rating: 156, 100%, 40%;
 }
